[tool.poetry]
name = "stonks"
version = "0.1.0"
description = "stocks widget for awesome wm and waybar"
authors = ["Maxim Andreev <andreevmaxim@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cdump/stonks"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
